--- a/style.css
+++ b/style.css
@@ -27,10 +27,19 @@ h2 {
 }
 
 .app {
+  min-width: 320px;
   width: 100vw;
   height: 100vh;
   display: flex;
   flex-direction: row;
+}
+
+.waves-small {
+  display: none;
+}
+
+.waves-large {
+  display: block;
 }
 
 .lucy {
@@ -50,9 +59,13 @@ h2 {
   gap: 16px;
 }
 
+.form__grid input {
+  width: 320px;
+}
+
 .form__grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr auto 1fr;
   column-gap: 16px;
 }
 
@@ -75,4 +88,51 @@ button {
   border-radius: 8px;
   background-color: #fefefc;
   color: #1e1e1e;
+}
+
+@media screen and (max-width: 800px) {
+  .app {
+    height: 100vh;
+    overflow: hidden;
+    flex-direction: column;
+  }
+
+  .waves-small {
+    display: block;
+  }
+
+  .waves-large {
+    display: none;
+  }
+
+  .lucy {
+    flex: 0;
+    height: 200px;
+  }
+
+  .form {
+    overflow: scroll;
+  }
+
+  .form__grid {
+    grid-template-columns: 1fr 1fr;
+    grid-auto-flow: dense;
+  }
+
+  .form__grid > *:nth-child(3n + 2) {
+    grid-column: 1 / 3;
+    margin-bottom: 16px;
+  }
+
+  .form__grid input {
+    width: 100%;
+  }
+
+  .form__grid > div {
+    text-align: right;
+  }
+
+  .form__grid label {
+    text-align: left;
+  }
 }
